# ubiquitous-octo-computing-machine

./: .env.example  .gitignore  CLAUDE.md  SECURITY.md  pyproject.toml  requirements.txt
.agents/skills/testing-flask-security-app/: SKILL.md
.github/workflows/: codeql.yml  tests.yml
app/: auth.py  config.py  database.py  main.py  routes.py  validation.py
src/octo_compute/: __init__.py  calculator.py  collections_utils.py  math_utils.py  string_utils.py  validators.py
tests/: test_calculator.py  test_collections_utils.py  test_math_utils.py  test_security.py  test_string_utils.py  test_validators.py
